[metadata]
name = extractorx
version = 0.0.2
url = https://github.com/trevormcguire/extractorx
author = Trevor McGuire
author_email = trevormcguire13@gmail.com
maintainer = Trevor McGuire
description = ExtractorX Python API Wrapper
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Development Status :: 3 - Alpha

[options]
package_dir=
    =src
pacakges=find:
install_requires = 
    requests

[options.packages.find]
where=src
